--- a/src/app/rdv/liste-today/rdv-liste.component.css
+++ b/src/app/rdv/liste-today/rdv-liste.component.css
@@ -1,48 +1,57 @@
-.rdv-list {
-    margin-top: 40px; /* Espacement supérieur */
+/* CSS */
+.home {
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+  height: 100vh; /* Ajustez la hauteur selon vos besoins */
+}
+
+.rappel-card {
+  max-width: 600px; /* Largeur maximale de la carte */
+  width: 100%; /* Garantit que la carte s'adapte à la largeur maximale */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Ombre */
+  text-align: left; /* Alignement du texte à gauche */
+  margin-bottom: 20px; /* Marge en bas pour l'espacement entre les cartes */
+}
+
+.avatar {
+  width: 50px; /* Largeur de l'avatar */
+  height: 50px; /* Hauteur de l'avatar */
+  border-radius: 50%; /* Bord arrondi */
+  background-color: #e0e0e0; /* Couleur de fond */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px; /* Marge à droite pour l'espacement */
+}
+
+mat-icon {
+  font-size: 24px; /* Taille de l'icône */
+}
+
+mat-card-title {
+  font-size: 20px; /* Taille du titre */
+  margin-bottom: 10px; /* Marge en bas pour l'espacement */
+}
+
+mat-card-subtitle {
+  font-size: 16px; /* Taille du sous-titre */
+  color: #666; /* Couleur du texte */
+}
+
+/* Optionnel : ajoutez des médias pour rendre la mise en page réactive */
+@media (max-width: 768px) {
+  .rappel-card {
+    padding: 15px; /* Réduire le rembourrage pour les écrans plus petits */
   }
-  
-  .list-title {
-    font-size: 24px; /* Taille du titre */
-    font-weight: bold; /* Texte en gras */
-    color: #3498db; /* Couleur bleue pour le titre */
-    margin-bottom: 16px; /* Espacement inférieur du titre */
-  }
-  
-  .table {
-    width: 100%; /* Largeur de la table */
-    border-collapse: collapse; /* Fusionner les bordures */
-  }
-  
-  th, td {
-    border: 1px solid #ddd; /* Bordures */
-    padding: 8px; /* Espacement intérieur */
-    text-align: left; /* Alignement du texte */
-  }
-  
-  th {
-    background-color: #f2f2f2; /* Couleur de fond pour les en-têtes */
-  }
-  
-  .service-details {
-    display: flex; /* Afficher les détails du service en ligne */
-    align-items: center; /* Alignement vertical */
-  }
-  .service-details td{
-    min-width: 20%;
-  }
-  
-  .service-details a {
-    text-decoration: none; /* Supprimer les soulignements des liens */
-    color: #3498db; /* Couleur bleue pour les liens */
-    margin-right: 8px; /* Espacement à droite */
-  }
-  .service-infos  {
-    text-align: center;
-  }
-  
-  .service-details span {
-    font-size: 14px; /* Taille de police pour le délai */
-    color: #555; /* Couleur de police pour le délai */
-  }
-  
+}
+/* CSS */
+.rappel-title {
+  color: #2a9b70; /* Couleur du titre */
+  text-align: center; /* Alignement centré */
+  margin-bottom: 20px; /* Marge en bas pour l'espacement */
+  font-size: 24px; /* Taille de la police du titre */
+}
+
