Suivi de comission

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
               <mat-nav-list *ngIf="isEmploye()">
                   <a mat-list-item routerLink="/lien1">Mon Profil</a>
                   <a mat-list-item routerLink="/lien1">Mon emploi du temps</a>
-                  <a mat-list-item routerLink="/suiviTaches">Mes taches aujourd'hui</a>
+                  <a mat-list-item routerLink="/suiviTaches">Ma journée </a>
               </mat-nav-list>
               <mat-expansion-panel *ngIf="isEmploye()">
                   <mat-expansion-panel-header>
