--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,6 +31,8 @@
               </mat-expansion-panel>
           </mat-accordion>
           <mat-nav-list *ngIf="isManager()">
+            <a mat-list-item routerLink="/clients">Client</a>
+            <a mat-list-item routerLink="/employes">Employé</a>
             <a mat-list-item routerLink="/manageService">Service</a>
         </mat-nav-list>
       </div>
