--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,6 +33,7 @@
           <mat-nav-list *ngIf="isManager()">
             <a mat-list-item routerLink="/clients">Client</a>
             <a mat-list-item routerLink="/employes">Employé</a>
+            <a mat-list-item routerLink="/offres">Offre</a>
             <a mat-list-item routerLink="/manageService">Service</a>
         </mat-nav-list>
       </div>
