--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,3 +18,17 @@
     align-items: center;
     justify-content: center;
 }
+
+.notif-card{
+    border-radius: 8px;
+    box-shadow: 0 2px 2px rgb(233, 225, 225);
+    margin: 5px;
+    background-color:rgb(122, 233, 224)
+}
+
+.avatar2{
+    background-color: rgb(54, 87, 194);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
