Accueil employe: redirection vers mes rdv du jour

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,4 +20,7 @@
             </mat-card-header>
         </mat-card>
     </div>
+    <div *ngIf="isEmploye()" >
+        <app-rdv-liste-component></app-rdv-liste-component>
+    </div>
 </div>
