--- a/src/app/rdv/liste-today/rdv-liste.component.html
+++ b/src/app/rdv/liste-today/rdv-liste.component.html
@@ -3,7 +3,7 @@
     <!-- Colonne pour la liste des rendez-vous -->
     <div class="col-md-6">
       <div class="rappel-list">
-        <h1 class="rappel-title">Mes RDV aujourd'hui</h1>
+        <h1 class="rappel-title">Mes rendez-vous d'aujourd'hui</h1>
         <mat-card *ngFor="let rdv of rendezVous" class="rappel-card">
           <mat-card-header>
             <div mat-card-avatar class="avatar">
