--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
     <div *ngIf="isEmploye()" >
         <app-rdv-liste-component></app-rdv-liste-component>
     </div>
-    <div *ngIf="isManager" >
+    <div *ngIf="isManager()" >
        <app-stat-rdv></app-stat-rdv> 
     </div>
 </div>
