--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
 <mat-toolbar color="primary" class="footer">
-  <p style="text-align: center;">By RABEARIMANANA HARINIAINA Kanto Fanjava & RANADISON Koloinanirina Diamondra</p>
+  <p>© 2024</p>
+  <img src="assets/beaute-verte.png" alt="Logo" class=" logo-sary">
+  <p style="text-align: center;">Diamondra & Fanjava</p>
 </mat-toolbar>
