--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -1,4 +1,6 @@
-<div class="login-container">
+<div class="big-container">
+  <div class="login-container">
+    <img src="../../assets/beaute-verte.png" class="logo-sary" alt="" srcset="">
     <h2>Inscription</h2>
     <div *ngIf="errorMessage" class="error-message">
         {{ errorMessage }}
@@ -31,4 +33,5 @@
       <span>Déjà un compte? </span><a [routerLink]="['/']">Connectez-vous</a>
     </form>
   </div>
+</div>
   
