--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,3 +6,15 @@
     height:  100vh;
     gap:  1em;
   }
+  .big-container{
+    width: 100vw;
+    background-image: url("../../assets/login-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .logo-sary {
+    width: 64px;
+    /* Largeur souhaitée */
+    height: auto;
+    /* Hauteur automatique pour maintenir les proportions */
+}
