--- a/src/app/user/profil/profil.component.css
+++ b/src/app/user/profil/profil.component.css
@@ -1,6 +1,4 @@
-.profil-container {
-    margin: 20px;
-  }
+
   
   .btn{
     background-color: #2c5044;
@@ -42,8 +40,28 @@
     margin-left: 10px;
   }
   /* Mettre en page les formulaires côte à côte */
-  .error-message{
-    width: 100%;
-  }
+  .error-message {
+    margin-top: 16px;
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.error-message .closebtn {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    color: #F70000;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
   
   
